--- a/app/b2b-index.html
+++ b/app/b2b-index.html
@@ -23,7 +23,7 @@
       </div>
     </nav>
     <br>
-    <h5 class="card-header text-center">Vanilla JavaScript SPA calling MS Graph API with MSAL.JS (Multi-tenant Login)</h5>
+    <h5 class="card-header text-center">Vanilla JavaScript SPA calling MS Graph API with MSAL.JS (B2B Login)</h5>
     <br>
     <div class="row" style="margin:auto" >
       <div id="card-div" class="col-md-3" style="display:none">
@@ -92,6 +92,7 @@
     
     <!-- importing app scripts (load order is important) -->
     <script type="text/javascript" src="./authConfig.js"></script>
+    <script type="text/javascript" src="./authConfig-b2bOverride.js"></script>
     <script type="text/javascript" src="./graphConfig.js"></script>
     <script type="text/javascript" src="./ui.js"></script>
     
